monkey-c-formatter/tests/snapshots/snapshots__ternary_wraps_when_too_long.snap
---
source: tests/snapshots.rs
expression: "format_width(\"var x = superLongCondition ? caseIfTrue : caseIfFalse;\", 40)"
---
var x = superLongCondition
    ? caseIfTrue
    : caseIfFalse;
