monkey-c-formatter/tests/snapshots/snapshots__throw_new_exception.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { throw new Lang.Exception(); }\")"
---
function f() {
    throw new Lang.Exception();
}
