monkey-c-formatter/tests/snapshots/snapshots__trailing_comments_align_with_alignment.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: format_aligned(CONSECUTIVE_TRAILING_COMMENTS.trim())
---
function f() {
    matchplans = MatchPlan.MATCHPLANS2018; // plans
    teams = Teams.TEAMS;                   // teams
}
