monkey-c-formatter/tests/snapshots/snapshots__type_cast_expression.snap
---
source: tests/snapshots.rs
expression: "format(\"function f() { var x = arr as Array<Number>; }\")"
---
function f() {
    var x = arr as Array<Number>;
}
