monkey-c-formatter/tests/snapshots/snapshots__var_and_const_with_type.snap
---
source: tests/snapshots.rs
expression: "format(r#\"\nvar x as Number = 1;\nconst RATE as Float = 1.5;\n\"#.trim())"
---
var x as Number = 1;
const RATE as Float = 1.5;
