monkey-c-formatter/tests/snapshots/snapshots__var_type_annotation_before_initializer.snap
---
source: tests/snapshots.rs
expression: "format(\"class C { var x as Float = 1.0; }\")"
---
class C {
    var x as Float = 1.0;
}
