monkey-c-formatter/tests/snapshots/snapshots__while_long_condition_wraps.snap
---
source: tests/snapshots.rs
expression: "format_width(\"function f() { while (alpha + beta + gamma <= maxFieldThreshold) { x = x - 1; } }\",\n40,)"
---
function f() {
    while (alpha + beta + gamma
        <= maxFieldThreshold)
    {
        x = x - 1;
    }
}
