monkey-c-formatter/tests/snapshots/snapshots__while_short_condition.snap
---
source: monkey-c-formatter/tests/snapshots.rs
expression: "format(\"function f() { while (x > 0) { x = x - 1; } }\")"
---
function f() {
    while (x > 0) {
        x = x - 1;
    }
}
